Adição de background na home

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <header class="initial">
-        <img src="/assets/logo.png" alt="logo" class="logo">
+        <img src="./assets/logo.png" alt="logo" class="logo">
         <nav>
             <ul>
                 <li><a href="#home"><span>// home</span></a></li>
