--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>under construction</title>
-    <link rel="icon" type="image/png" href="./assets/icon.png">
+    <link rel="icon" type="image/png" href="../assets/icon.png">
     <script src="/main.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
 <body>
 
     <header class="initial">
-        <img src="./assets/logo.png" alt="logo" class="logo">
+        <img src="../assets/logo.png" alt="logo" class="logo">
         <nav>
             <ul>
                 <li><a href="#home"><span>// home</span></a></li>
