Criando sessão contatos

--- a/index.html
+++ b/index.html
@@ -84,9 +84,42 @@
 
         </section>
 
-        <section id="contact" class="contact container">
-            <h2>Contact</h2>
+        <section id="contact" class="contact">
 
+            <div class="container1">
+                <h2>Contact</h2>
+                <p>luisfranca@outlook.com</p>
+                <a href="https://instagram.com/luisf.franca" target="_blank">Instagram</a>
+                <a href="https://www.linkedin.com/in/luisfilipefranca/" target="_blank">LinkedIn</a>
+                <a href="https://api.whatsapp.com/send?phone=5531997103367&text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20sobre%20cria%C3%A7%C3%A3o%20de%20sites%20e%20aplicativos!"
+                    target="_blank">WhatsApp</a>
+                <a href="https://github.com/luisf-franca" target="_blank">Github</a>
+            </div>
+
+            <div class="container2">
+                <a href="https://instagram.com/luisf.franca" target="_blank">Instagram</a>
+                <a href="https://www.linkedin.com/in/luisfilipefranca/" target="_blank">LinkedIn</a>
+                <a href="https://api.whatsapp.com/send?phone=5531997103367&text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20sobre%20cria%C3%A7%C3%A3o%20de%20sites%20e%20aplicativos!"
+                    target="_blank">WhatsApp</a>
+                <a href="https://github.com/luisf-franca" target="_blank">Github</a>
+            </div>
+            
+            <div>
+                <div class="container3">
+                    <a href="https://instagram.com/luisf.franca" target="_blank">Instagram</a>
+                    <a href="https://www.linkedin.com/in/luisfilipefranca/" target="_blank">LinkedIn</a>
+                    <a href="https://api.whatsapp.com/send?phone=5531997103367&text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20sobre%20cria%C3%A7%C3%A3o%20de%20sites%20e%20aplicativos!"
+                        target="_blank">WhatsApp</a>
+                    <a href="https://github.com/luisf-franca" target="_blank">Github</a>
+                </div>
+                <div class="container4">
+                    <a href="https://instagram.com/luisf.franca" target="_blank">Instagram</a>
+                    <a href="https://www.linkedin.com/in/luisfilipefranca/" target="_blank">LinkedIn</a>
+                    <a href="https://api.whatsapp.com/send?phone=5531997103367&text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20sobre%20cria%C3%A7%C3%A3o%20de%20sites%20e%20aplicativos!"
+                        target="_blank">WhatsApp</a>
+                    <a href="https://github.com/luisf-franca" target="_blank">Github</a>
+                </div>
+            </div>
         </section>
 
 
