Adição de do perfil do Behance no campo de Contato

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             </nav>
 
             <div class="selectors">
-            <img id="darkModeButton" src="./assets/darkmode2.png" alt="Dark Mode Toggle">
-            <button id="languageButton" onclick="toggleLanguage()">EN/PT</button>
-        </div>
+                <img id="darkModeButton" src="./assets/darkmode2.png" alt="Dark Mode Toggle">
+                <button id="languageButton" onclick="toggleLanguage()">EN/PT</button>
+            </div>
 
         </div>
     </header>
@@ -88,22 +88,9 @@
         <section id="work" class="work container">
             <div class="allboro_container">
                 <h2 data-en="My Work" data-pt="Meu Trabalho"></h2>
-                <p class="allboro_description" 
-                
-                data-en="As the leader of the programming team, I had the honor of playing a
-                pivotal role in the development of All Boro Tours, an innovative tourism project based in Manhattan,
-                New York City. My focus was on the front end, utilizing React JS and React Native, in addition to
-                integrating an API developed in C#. I worked to create intuitive and efficient interfaces, providing
-                an engaging experience for users. I take pride in having led the team in this project, contributing
-                to the development of a platform that connects tourists to the wonders of different places."
-
-                data-pt="Como líder da equipe de programadores, tive a honra de desempenhar um papel fundamental 
-                no desenvolvimento do All Boro Tours, um projeto inovador de turismo sediado na ilha de Manhattan, 
-                em Nova York. Concentrei meus esforços no front end, utilizando React JS e React Native, além de 
-                integrar uma API desenvolvida em C#. Trabalhei para criar interfaces intuitivas e eficientes, 
-                proporcionando uma experiência envolvente para os usuários. Fico orgulhoso de ter liderado a equipe 
-                nesse projeto, contribuindo para o desenvolvimento de uma plataforma que conecta turistas às 
-                maravilhas de diferentes lugares.">
+                <p class="allboro_description"
+                    data-en="As the leader of the programming team, I had the honor of playing a pivotal role in the development of All Boro Tours, an innovative tourism project based in Manhattan, New York City. My focus was on the front end, utilizing React JS and React Native, in addition to integrating an API developed in C#. I worked to create intuitive and efficient interfaces, providing an engaging experience for users. I take pride in having led the team on this project, contributing to the development of a platform that connects tourists to the wonders of different places."
+                    data-pt="Como líder da equipe de programadores, tive a honra de desempenhar um papel fundamental no desenvolvimento do All Boro Tours, um projeto inovador de turismo sediado na ilha de Manhattan, em Nova York. Concentrei-me nos esforços no front-end, utilizando React JS e React Native, além de integrar uma API desenvolvida em C#. Trabalhei para criar interfaces intuitivas e eficientes, proporcionando uma experiência envolvente para os usuários. Fico orgulhoso de ter liderado a equipe nesse projeto, contribuindo para o desenvolvimento de uma plataforma que conecta turistas às maravilhas de diferentes lugares.">
                 </p>
                 <!-- <button>
                     <a href="">See more</a>
@@ -121,6 +108,7 @@
                 <a href="https://instagram.com/luisf.franca" target="_blank">Instagram</a>
                 <a href="https://www.linkedin.com/in/luisfilipefranca/" target="_blank">LinkedIn</a>
                 <a href="https://github.com/luisf-franca" target="_blank">GitHub</a>
+                <a href="https://www.behance.net/luisffranca" target="_blank">Behance</a>
                 <a href="https://api.whatsapp.com/send?phone=5531997103367&text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20sobre%20cria%C3%A7%C3%A3o%20de%20sites%20e%20aplicativos!"
                     target="_blank">WhatsApp</a>
             </div>
