--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
             <div class="container1">
                 <h2 data-en="Contact" data-pt="Contato"></h2>
-                <p>luisfranca@outlook.com</p>
+                <a href = "mailto:luisfranca@outlook.com" target="_blank">luisfranca@outlook.com</a>
                 <a href="https://instagram.com/luisf.franca" target="_blank">Instagram</a>
                 <a href="https://www.linkedin.com/in/luisfilipefranca/" target="_blank">LinkedIn</a>
                 <a href="https://github.com/luisf-franca" target="_blank">GitHub</a>
@@ -115,7 +115,7 @@
 
 
 
-
+ 
 
             <!-- <div class="container2">
 
