--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="language" content="pt-BR">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#f3f5f5" />
-  <link rel="icon" type="image/png" href="src/assets/icon.png">
+  <link rel="icon" type="image/png" href="./src/assets/icon.png">
   <title>LUÍS FILIPE</title>
 </head>
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="./src/main.jsx"></script>
 </body>
 
 </html>
