--- a/404.html
+++ b/404.html
@@ -2,12 +2,14 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0; url=/" />
+    <meta http-equiv="refresh" content="0; url=/index.html" />
 </head>
 
 <body>
     <script>
-        window.location.replace("/" + window.location.pathname + window.location.search + window.location.hash);
+        const base = "http://luisffranca.site";
+        const path = window.location.pathname + window.location.search + window.location.hash;
+        window.location.replace(base + path);
     </script>
 </body>
 
