--- a/public/404.html
+++ b/public/404.html
@@ -7,15 +7,7 @@
 
 <body>
     <script>
-        const base = "http://luisffranca.site";
-        const currentURL = window.location.href;
-
-        if (!currentURL.startsWith(base + "/index.html") && !currentURL.startsWith(base + "/")) {
-            const path = window.location.pathname + window.location.search + window.location.hash;
-            window.location.replace(base + path);
-        } else {
-            console.error("Redirecionamento desnecessário evitado para prevenir loops.");
-        }
+        window.location.replace("https://luisffranca.site");
     </script>
 </body>
 
